--- a/src/app/poster/poster-edit/poster-edit.component.less
+++ b/src/app/poster/poster-edit/poster-edit.component.less
@@ -3,3 +3,16 @@
   height: 200px;
   background-color: rgb(10, 131, 161);
 }
+
+.drag-none {
+  -webkit-user-select:none; 
+  -moz-user-select:none; 
+  -ms-user-select:none; 
+  user-select:none;
+}
+
+:host ::ng-deep .ant-btn-primary {
+  margin-right: 8px;
+  margin-bottom: 12px;
+  margin-top: 12px;
+}
