--- a/src/app/poster/poster-edit/poster-edit.component.html
+++ b/src/app/poster/poster-edit/poster-edit.component.html
@@ -1,16 +1,10 @@
-<nz-steps [nzCurrent]="1">
-  <nz-step nzTitle="Finished" nzDescription="This is a description."></nz-step>
-  <nz-step nzTitle="In Progress" nzSubtitle="Left 00:00:08" nzDescription="This is a description."> </nz-step>
-  <nz-step nzTitle="Waiting" nzDescription="This is a description."></nz-step>
-</nz-steps>
-<div class="drag-none">
-  <h2>这是海报组件</h2>
-  <div>海报top属: {{posterOption.top}}</div>
-  <div>海报left属: {{posterOption.left}}</div>
-  <div>海报isShow属: {{posterOption.isShow}}</div>
-  
+<div class="poster-edit-wrap">
+    <div class="poster-img-container" #myBounds>
+      <div class="poster" ngDraggable [bounds]="myBounds" inBounds="true">Drag me!</div>
+    </div>
+    <div class="upload-tips">
+      这是提示
+    </div>
+      <!-- <div [style.fontSize]="fontSize" [style.color]="'red'">styleBinding</div>
+      <div [ngStyle]="{'font-size': isMax ? '24px' : '12px'}">ngStyle-添加判断</div> -->
 </div>
-<button nz-button nzType="primary" routerLink="/posterOption">Primary</button>
-<div class="poster" ngDraggable>Drag me!</div>
-<div [style.fontSize]="fontSize" [style.color]="'red'">styleBinding</div>
-<div [ngStyle]="{'font-size': isMax ? '24px' : '12px'}">ngStyle-添加判断</div>
