--- a/src/app/poster/poster-edit/poster-edit.component.less
+++ b/src/app/poster/poster-edit/poster-edit.component.less
@@ -1,7 +1,23 @@
-.poster {
-  width: 200px;
-  height: 200px;
-  background-color: rgb(10, 131, 161);
+.poster-edit-wrap {
+  padding: 24px;
+  .poster-img-container {
+    position: relative;
+    width: 560px;
+    height: 960px;
+    background-color: #aaa;
+    .poster {
+      width: 200px;
+      height: 200px;
+      background-color: cyan;
+    }
+  }
+  .upload-tips {
+    padding: 24px;
+    text-align: center;
+    line-height: 40px;
+    font-size: 16px;
+    color: #ccc;
+  }
 }
 
 .drag-none {
