--- a/src/app/poster/poster-show/poster-show.component.html
+++ b/src/app/poster/poster-show/poster-show.component.html
@@ -1,1 +1,69 @@
-<p>poster-show works!</p>
+<div class="main-container">
+  <div class="menu-wrapper">
+    <ul nz-menu nzMode="inline" nzTheme="dark" [nzInlineCollapsed]="isCollapsed" class="menu-container">
+      <li>
+        <div class="menu-title" (click)="toggleCollapsed()">
+          <i nz-icon nzType="windows" nzTheme="outline"></i>
+        </div>
+      </li>
+      <li nz-submenu [(nzOpen)]="openMap.sub1" (nzOpenChange)="openHandler('sub1')" nzTitle="Navigation One"
+        nzIcon="mail">
+        <ul>
+          <li nz-menu-group nzTitle="Item 1">
+            <ul>
+              <li nz-menu-item>Option 1</li>
+              <li nz-menu-item>Option 2</li>
+            </ul>
+          </li>
+          <li nz-menu-group nzTitle="Item 2">
+            <ul>
+              <li nz-menu-item>Option 3</li>
+              <li nz-menu-item>Option 4</li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li nz-submenu [(nzOpen)]="openMap.sub2" (nzOpenChange)="openHandler('sub2')" nzTitle="Navigation Two"
+        nzIcon="appstore">
+        <ul>
+          <li nz-menu-item>Option 5</li>
+          <li nz-menu-item>Option 6</li>
+          <li nz-submenu nzTitle="Submenu">
+            <ul>
+              <li nz-menu-item>Option 7</li>
+              <li nz-menu-item>Option 8</li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li nz-submenu [(nzOpen)]="openMap.sub3" (nzOpenChange)="openHandler('sub3')" nzTitle="Navigation Three"
+        nzIcon="setting">
+        <ul>
+          <li nz-menu-item>Option 9</li>
+          <li nz-menu-item>Option 10</li>
+          <li nz-menu-item>Option 11</li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+
+  <div class="poster-navbar">
+    <span class="admin-header">
+      欢迎你, 管理员&nbsp;<i nz-icon nzType="bell" nzTheme="outline"></i>
+    </span>
+  </div>
+
+  <div class="poster-content-container">
+      
+    <div class="poster-title">自定义海报</div>
+    <div class="wrap-container">
+      <div class="poster-edit-container">
+        <app-poster-edit></app-poster-edit>
+      </div>
+      <div class="poster-options-container">
+        <app-poster-options></app-poster-options>
+      </div>
+    </div>
+    
+  </div>
+</div>
