新增海报背景图

--- a/src/app/poster/poster-edit/poster-edit.component.html
+++ b/src/app/poster/poster-edit/poster-edit.component.html
@@ -1,6 +1,6 @@
 <div class="poster-edit-wrap">
     <div class="poster-img-container" #myBounds>
-      <div class="poster" ngDraggable [bounds]="myBounds" inBounds="true">Drag me!</div>
+      <div class="poster" ngDraggable [bounds]="myBounds" inBounds="true"></div>
     </div>
     <div class="upload-tips">
       这是提示
