--- a/src/app/poster/poster-edit/poster-edit.component.less
+++ b/src/app/poster/poster-edit/poster-edit.component.less
@@ -4,11 +4,11 @@
     position: relative;
     width: 560px;
     height: 960px;
-    background-color: #aaa;
+    background: url("../../../assets/imgs/posterImage.jpeg") no-repeat center center / 100%;
     .poster {
       width: 200px;
       height: 200px;
-      background-color: cyan;
+      background: url("../../../assets/imgs/userHeaderImage.jpg") no-repeat center center / 100%;
     }
   }
   .upload-tips {
